updating p5, p5.dom and p5.sound

--- a/index.html
+++ b/index.html
@@ -2,15 +2,67 @@
   <script language="javascript" type="text/javascript" src="libs/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libs/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="libs/p5.dom.js"></script>
-  <script language="javascript" type="text/javascript" src="libs/recorder.js"></script>
   <script language="javascript" type="text/javascript" src="dragfile.js"></script>
   <script language="javascript" type="text/javascript" src="drumpad.js"></script>
+  <script language="javascript" type="text/javascript" src="libs/recorder.js"></script>
 
 </head>
 
 <body>
-  <div id="pad1" class="drop_zone"></div>
-  <div id="pad2" class="drop_zone"></div>
-  <div id="pad3" class="drop_zone"></div>
-  <div id="pad4" class="drop_zone"></div>
+
+  <div id="videoPlayer">
+        YO
+
+    <video>
+    </video>
+  </div>
+
+  <div id="keymap">
+
+    <div class="keyRow">
+      <div id="UP" class="drop_zone"></div>
+      <div id="DOWN" class="drop_zone"></div>
+      <div id="LEFT" class="drop_zone"></div>
+      <div id="RIGHT" class="drop_zone"></div>
+      <div id="SPACE" class="drop_zone"></div>
+    </div>
+    <div class="keyRow">
+      <div id="q" class="drop_zone"></div>
+      <div id="w" class="drop_zone"></div>
+      <div id="e" class="drop_zone"></div>
+      <div id="r" class="drop_zone"></div>
+      <div id="t" class="drop_zone"></div>
+      <div id="y" class="drop_zone"></div>
+      <div id="u" class="drop_zone"></div>
+      <div id="i" class="drop_zone"></div>
+      <div id="o" class="drop_zone"></div>
+      <div id="p" class="drop_zone"></div>
+    </div>
+    <div class="keyRow">
+      <div id="a" class="drop_zone"></div>
+      <div id="s" class="drop_zone"></div>
+      <div id="d" class="drop_zone"></div>
+      <div id="f" class="drop_zone"></div>
+      <div id="g" class="drop_zone"></div>
+      <div id="h" class="drop_zone"></div>
+      <div id="j" class="drop_zone"></div>
+      <div id="k" class="drop_zone"></div>
+      <div id="l" class="drop_zone"></div>
+      <div id=";" class="drop_zone"></div>
+    </div>
+    <div class="keyRow">
+      <div id="z" class="drop_zone"></div>
+      <div id="x" class="drop_zone"></div>
+      <div id="c" class="drop_zone"></div>
+      <div id="v" class="drop_zone"></div>
+      <div id="b" class="drop_zone"></div>
+      <div id="n" class="drop_zone"></div>
+      <div id="m" class="drop_zone"></div>
+      <div id="," class="drop_zone"></div>
+      <div id="." class="drop_zone"></div>
+      <div id="/" class="drop_zone"></div>
+    </div>
+
+  </div>
+
 </body>
