registering keypresses, and whether the pad has sound

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
   <div id="keymap">
 
     <div class="keyRow">
-      <div id="UP" class="drop_zone"></div>
-      <div id="DOWN" class="drop_zone"></div>
-      <div id="LEFT" class="drop_zone"></div>
-      <div id="RIGHT" class="drop_zone"></div>
-      <div id="SPACE" class="drop_zone"></div>
+      <div id="UP_ARROW" keycode="38" class="drop_zone"></div>
+      <div id="DOWN_ARROW" keycode="40" class="drop_zone"></div>
+      <div id="LEFT_ARROW" keycode="37" class="drop_zone"></div>
+      <div id="RIGHT_ARROW" keycode="39" class="drop_zone"></div>
+      <div id="SPACE" keycode="32" class="drop_zone"></div>
     </div>
+    <br/>
     <div class="keyRow">
       <div id="q" class="drop_zone"></div>
       <div id="w" class="drop_zone"></div>
@@ -38,6 +39,7 @@
       <div id="o" class="drop_zone"></div>
       <div id="p" class="drop_zone"></div>
     </div>
+    <br/>
     <div class="keyRow">
       <div id="a" class="drop_zone"></div>
       <div id="s" class="drop_zone"></div>
@@ -50,6 +52,7 @@
       <div id="l" class="drop_zone"></div>
       <div id=";" class="drop_zone"></div>
     </div>
+    <br/>
     <div class="keyRow">
       <div id="z" class="drop_zone"></div>
       <div id="x" class="drop_zone"></div>
