updating p5.sound, modular pads, removed playhead for now

--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
 
 <body>
 
-  <div id="videoPlayer">
-        YO
-
-    <video>
-    </video>
-  </div>
-
   <div id="keymap">
 
     <div class="keyRow">
@@ -28,9 +21,9 @@
     </div>
     <br/>
     <div class="keyRow">
-      <div id="q" class="drop_zone"></div>
-      <div id="w" class="drop_zone"></div>
-      <div id="e" class="drop_zone"></div>
+<!--       <div id="q" class="drop_zone"></div>
+ -->      <div id="w" class="drop_zone"></div>
+<!--       <div id="e" class="drop_zone"></div>
       <div id="r" class="drop_zone"></div>
       <div id="t" class="drop_zone"></div>
       <div id="y" class="drop_zone"></div>
@@ -41,12 +34,12 @@
     </div>
     <br/>
     <div class="keyRow">
-      <div id="a" class="drop_zone"></div>
+ -->      <div id="a" class="drop_zone"></div>
       <div id="s" class="drop_zone"></div>
       <div id="d" class="drop_zone"></div>
       <div id="f" class="drop_zone"></div>
       <div id="g" class="drop_zone"></div>
-      <div id="h" class="drop_zone"></div>
+<!--      <div id="h" class="drop_zone"></div>
       <div id="j" class="drop_zone"></div>
       <div id="k" class="drop_zone"></div>
       <div id="l" class="drop_zone"></div>
@@ -64,8 +57,13 @@
       <div id="," class="drop_zone"></div>
       <div id="." class="drop_zone"></div>
       <div id="/" class="drop_zone"></div>
-    </div>
+    </div> -->
 
+  </div>
+
+  <div id="videoPlayer">
+    <video src="video/fingers.mov" loop autoplay>
+    </video>
   </div>
 
 </body>
